# snake-game

./: .gitignore  Cargo.toml  build.rs
.cargo/: config.toml
android/: AndroidManifest.xml
src/: constants.rs  database.rs  game_logic.rs  lib.rs  main.rs  main_desktop.rs  resources.rs
src/assests/: placeholder.txt
src/ui/: game_screen.rs  leaderboard.rs  main_menu.rs  mod.rs  profile.rs  settings.rs  share.rs
src/ui/components/: keyboard.rs
