[package]
name = "snake_game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = { version = "0.12", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
] }
bevy_egui = { version = "0.23", default-features = false }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
qrcode = "0.14"
image = "0.24"
directories = "5.0"
rusqlite = { version = "0.30", features = ["bundled"] }

[package.metadata.android]
package = "com.mintykiera.snakegame"
label = "Snake Game"
build_targets = ["aarch64-linux-android", "armv7-linux-androideabi"]
assets = "assets"

[package.metadata.android.sdk]
target_sdk_version = 34
min_sdk_version = 24

[profile.release]
opt-level = 'z'
lto = "thin"
codegen-units = 1
panic = 'abort'
strip = true

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[package.metadata.android.signing.release]
path = "snake_game.keystore"
keystore_password = "ENV"
key_alias = "snake_game_alias"
key_password = "ENV"