[package]
name = "snake_game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = "0.14"
bevy_egui = { version = "0.28", default-features = false }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
qrcode = "0.14"
image = "0.24"
directories = "5.0"
rusqlite = { version = "0.30", features = ["bundled"] }

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6", features = ["native-activity"] }

[package.metadata.android]
package = "com.mintykiera.snakegame"
label = "Snake Game"
build_targets = ["aarch64-linux-android", "armv7-linux-androideabi"]
assets = "assets"

[package.metadata.android.sdk]
target_sdk_version = 33
min_sdk_version = 24

[profile.release]
opt-level = 'z'
lto = "thin"
codegen-units = 1
panic = 'abort'
strip = true

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[profile.dev]
incremental = false