[package]
name = "snake_game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts", 
    "glow", 
    "persistence", 
    "android-native-activity"
] }
winit = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
qrcode = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["full"] }
image = { version = "0.25", default-features = false, features = ["png"] }
directories = "5.0"
dotenvy = "0.15"

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6", features = ["native-activity"] }

[package.metadata.android]
package = "com.mintykiera.snakegame"
label = "Snake Game"
build_targets = ["aarch64-linux-android"]
assets = "assets"

[package.metadata.android.application]
theme = "@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"

[package.metadata.android.activity]
theme = "@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"
orientation = "unspecified"

[package.metadata.android.activity.meta_data]
"android.support.PARENT_ACTIVITY" = ".NativeActivity"

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[[package.metadata.android.uses_permission]]
name = "android.permission.ACCESS_NETWORK_STATE"

[package.metadata.android.sdk]
target_sdk_version = 33
min_sdk_version = 24

[profile.release]
opt-level = 'z'
lto = "thin"
codegen-units = 1
panic = 'abort'
strip = true

[build-dependencies]
dotenvy = "0.15"

[profile.release]
opt-level = 'z'
lto = "thin"
codegen-units = 1
panic = 'abort'
strip = true